[package]
name = "millegrilles_cryptographie"
version = "2024.2.0"
edition = "2021"

[features]
std = []
alloc = ['std', 'serde_json']
optional-defaults = ['alloc', 'hex/default', 'multibase/default', 'multihash/default', 'chacha20poly1305/default']

# High-level features
x509 = ['openssl', 'x509-parser', 'optional-defaults']
x25519 = ['openssl', 'dryoc', 'optional-defaults']

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
chrono = { version = "0.4", default-features = false }

# String representations
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", optional = true }
serde-json-core = "0.5"
serde_repr = "0.1"
hex = { version = "0.4", default-features = false }
multibase = { version = "0.9", default-features = false }
multihash = { version = "0.19.1", default-features = false }

# Hashing
blake2 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# openssl (x509)
openssl = { version = "0.10.64", features = ["vendored"], optional = true }

# Encryption
dryoc = { version = "0.5.3", optional = true }
chacha20poly1305 = { version = "0.10", default-features = false }
# x25519-dalek = { version = "2.0", default-features = false }

# Signature
ed25519-dalek = { version = "2.1", default-features = false }

# x509
x509-parser = { version = "0.16.0", optional = true }
base64 = "0.22.0"
async-trait = "0.1.77"
flate2 = "1.0.28"
rand = "0.9.0-alpha.0"
reqwest = "0.11.26"
zeroize = "1.7.0"
tokio = "1.36.0"

[dev-dependencies]
test-log = "0.2.15"
