[package]
name = "millegrilles_cryptographie"
version = "2024.4.8"
edition = "2021"

[features]
std = []
alloc = ['std', 'serde_json']
optional-defaults = ['alloc', 'hex/default', 'base64/default', 'multibase/default', 'multihash/default', 'chacha20poly1305/default', 'chrono/now']

# High-level features
x509 = ['openssl', 'x509-parser', 'optional-defaults']
x25519 = ['openssl', 'dryoc', 'optional-defaults']
chiffrage = ['alloc', 'x509', 'rand', 'x25519', 'zeroize', 'flate2']

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
log = { version = "0.4"}
chrono = { version = "0.4", default-features = false }

# String representations
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde-json-core = "0.5"
serde_repr = "0.1"
hex = { version = "0.4", default-features = false }
base64 = { version =  "0.22", default-features = false }
multibase = { version = "0.9", default-features = false }
multihash = { version = "0.19", default-features = false }

# Hashing
blake2 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# openssl (x509)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Encryption
rand = { version = "0.9.0-alpha.1", optional = true }
dryoc = { version = "0.5.3", optional = true }
chacha20poly1305 = { version = "0.10", default-features = false }
# x25519-dalek = { version = "2.0", default-features = false }
zeroize = { version = "1.7.0", optional = true }
flate2 = { version = "1.0", optional = true }

# Signature
ed25519-dalek = { version = "2.1", default-features = false }

# x509
x509-parser = { version = "0.16", optional = true }

[dev-dependencies]
test-log = "0.2"
